GNOME Bugzilla – Bug 667817
v4l2src: Don't assert when the interface is not implemented.
Last modified: 2012-01-13 10:13:30 UTC
Created attachment 205139 [details] [review] patch The correct behavior should simply be to return FALSE(?)
Ok, I'm not sure it is really the "correct" behaviour, but GstImplementsInterface is a mess anyway, so may just as well just return FALSE. It's gone in 0.11, so I don't care too much ;) I'm not even going to ask what you did to run into this.. (but I suspect it was using GstImplementsInterface in a way it's not supposed to be used). commit 150403ab13dbccef653537cc62cc30a42f71d43f Author: Havard Graff <havard.graff@tandberg.com> Date: Mon Sep 5 10:43:19 2011 +0200 v4l2src: Don't assert when the interface is not implemented. Simply return FALSE instead. https://bugzilla.gnome.org/show_bug.cgi?id=667817