v4l2src: Don't assert when the interface is not implemented.

Simply return FALSE instead.

https://bugzilla.gnome.org/show_bug.cgi?id=667817